pscanrules: CSP-Exclude plugin-types and report-uri from Wildcard Alert
- Update Change log.
- Tweak code.
- Clean code: Switch Arrays.asList to List.of

Signed-off-by: kingthorin <kingthorin@users.noreply.github.com>